<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    </org.osmdroid.views.MapView>

    <Button
        android:id="@+id/center_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="683dp"
        android:text="@string/center_btn" />


    <TextView
        android:id="@+id/number_tV"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="210dp"
        android:text="@string/number_tV"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

</RelativeLayout>