...
    <string name="registerHeader_text">Register</string>
    <string name="registerButton_text">Register</string>
    <string name="alreadyHaveAnAccount_text">Already have an Account ?</string>
    <string name="loginLink_text">Login</string>
    <string name="confirmPasswordHint_text">confirm password</string>

    <string name="settings_btn">Settings</string>
    <string name="invalidUsername_text">Username is invalid</string>
    <string name="invalidPassword_text">Password is invalid</string>
    <string name="successfulLogin">Login successful</string>
    <string name="failedLogin_text">Login failed</string>
    <string name="unknownError_text">Unknown error</string>
    <string name="error_text">Error</string>
...
    <string name="saveSetting_text">Save</string>
    <string name="descriptionSetting_headerText">Description</string>
    <string name="radius_text">Radius</string>
    <string name="radius_hintText">km</string>
    <string name="deleteAccount_headerText">Delete Account!</string>
    <string name="deleteAccount_messageText">Do you really want to delete this account?</string>
    <string name="yes_dialogText">Yes</string>
    <string name="no_dialogText">No</string>
    <string name="saveChanges_headerText">Save Changes</string>
    <string name="saveChanges_messageText">Do you want to save all changes?</string>
    <string name="currentDescription_headerText">Current Description</string>
    <string name="close_dialogText">Close</string>
    <string name="saved_messageText">Saved!</string>
...
